[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "blaupause"
version = "0.1.15"
dependencies = [
    "pytest",
]
requires-python = ">=3.8"

authors = [
    {name="Martin Lang"},
    {name="Marijan Beg"},
]
description = "Example package used as a template for setting up Python packages/repositories."
readme = "README.md"
license = "BSD-3-Clause"
license-files = ["LICENSE"]


[project.urls]
Homepage = "https://github.com/lang-m/blaupause"
# Documentation

[tool.towncrier]
directory = "changes"
filename = "CHANGELOG.md"
package = "blaupause"
issue_format = "[#{issue}](https://github.com/lang-m/blaupause/pulls/{issue})"

[tool.changelog-bot]
    [tool.changelog-bot.towncrier_changelog]
        enabled = true
        verify_pr_number = true
        #changelog_skip_label = "no-changelog-entry-needed"
        #changelog_missing_long = "There is no changelog fragment in this pull request. Please add a file to the `changes/` directory following instructions in the [changelog README](https://github.com/lang-m/blaupause/blob/main/changes/README.md)."
        #type_incorrect_long = "The changelog file you added is not one of the allowed types. ..."
        #number_incorrect_long = "The number in the changelog file you added does not match the number of this pull request. Please rename the file."